# Mind-Search

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  run_backend.bat  run_frontend.bat  server.py  test.py  vercel.json
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js
